--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-popper": "^2.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.4"
